Use get(0) instead of getFirst() for backport, because getFirst() is @since 21